--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
               <input id="background" type="checkbox" class="form-check-input" />
               <label class="form-check-label small" for="background">Transparent background</label>
             </div>
+          <div style="width: 200px; display: none;">
             <h6 class="border-bottom pb-2 mb-3">3D Object Dimensions</h6>
             <div class="mb-2">
               <label for="dim-x" class="form-label small">X-Axis: <span id="x-value" class="range-value">5.0</span></label>
@@ -130,6 +131,7 @@
               <input type="range" id="dim-z" class="form-range range-slider" min="0.1" max="20" step="0.1" value="5.0">
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
