--- a/index.html
+++ b/index.html
@@ -116,21 +116,6 @@
               <input id="background" type="checkbox" class="form-check-input" />
               <label class="form-check-label small" for="background">Transparent background</label>
             </div>
-          <div style="width: 200px; display: none;">
-            <h6 class="border-bottom pb-2 mb-3">3D Object Dimensions</h6>
-            <div class="mb-2">
-              <label for="dim-x" class="form-label small">X-Axis: <span id="x-value" class="range-value">5.0</span></label>
-              <input type="range" id="dim-x" class="form-range range-slider" min="0.1" max="20" step="0.1" value="5.0">
-            </div>
-            <div class="mb-2">
-              <label for="dim-y" class="form-label small">Y-Axis: <span id="y-value" class="range-value">5.0</span></label>
-              <input type="range" id="dim-y" class="form-range range-slider" min="0.1" max="20" step="0.1" value="5.0">
-            </div>
-            <div class="mb-2">
-              <label for="dim-z" class="form-label small">Z-Axis: <span id="z-value" class="range-value">5.0</span></label>
-              <input type="range" id="dim-z" class="form-range range-slider" min="0.1" max="20" step="0.1" value="5.0">
-            </div>
-          </div>
         </div>
         </div>
       </div>
@@ -139,7 +124,12 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-header">
-            <h5 class="mb-0"><i class="bi bi-image-fill me-2"></i>Image Generation Chat</h5>
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="mb-0"><i class="bi bi-image-fill me-2"></i>Image Generation Chat</h5>
+              <select id="image-model-select" class="form-select form-select-sm" style="width: 250px;">
+                <option value="">Select Image Model...</option>
+              </select>
+            </div>
           </div>
           <div class="card-body d-flex flex-column" style="height: 600px;">
             <div id="image-chat-log" class="flex-grow-1 overflow-auto mb-3"></div>
@@ -152,12 +142,23 @@
       </div>
       <div class="col-md-6">
         <div class="card">
-          <div class="card-header d-flex justify-content-between align-items-center">
-            <h5 class="mb-0"><i class="bi bi-box me-2"></i>3D Object Generation Chat</h5>
-          </div>
-          <div class="card-body d-flex flex-column" style="height: 600px;">
-            <div id="object-chat-log" class="flex-grow-1 overflow-auto mb-3">
+          <div class="card-header">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="mb-0"><i class="bi bi-box me-2"></i>3D Object Generation Chat</h5>
+              <select id="3d-model-select" class="form-select form-select-sm" style="width: 250px;">
+                <option value="">Select 3D Model...</option>
+              </select>
             </div>
+            <div class="border-top mt-2 pt-2">
+              <div class="small mb-0">
+                <h7>
+                  The 3D object generation chat continuation takes a screenshot of the current view.
+                </h7>
+              </div>
+            </div>
+          </div>
+          <div class="card-body d-flex flex-column" style="height: 563px;">
+            <div id="object-chat-log" class="flex-grow-1 overflow-auto mb-3"></div>
             <form id="object-chat-form" class="input-group">
               <textarea id="object-prompt-input" class="form-control" rows="2" placeholder="Describe the 3D object modification..."></textarea>
               <button id="object-send-btn" type="submit" class="btn btn-success"><i class="bi bi-send"></i></button>
